--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Essays-in-medical-sociology-Volume-I-of-2_69939
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 69939-h/images/cover.jpg
 creator:
   author:
     agent_name: Blackwell, Elizabeth
@@ -9,6 +12,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/53378
     wikipedia: https://en.wikipedia.org/wiki/Elizabeth_Blackwell
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/69939#Essays-in-medical-sociology-Volume-I-of-2
 gutenberg_issued: '2023-02-02'
 identifiers:
   gutenberg: '69939'
